--- a/demo/index.html
+++ b/demo/index.html
@@ -34,7 +34,7 @@
         <a href="routing.html">Routing</a>
       </li>
       <li>
-        <a href="remote.html">Remote Route</a>
+        <a href="declarative.html">Declarative</a>
       </li>
     </ul>
   </body>
