--- a/xin-middleware.html
+++ b/xin-middleware.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <!--
   @license
   Copyright (c) 2015 Xinix Technology
@@ -21,12 +20,55 @@
   FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
   DEALINGS IN THE SOFTWARE.
 -->
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>another html</title>
-</head>
-<body>
-  another html
-</body>
-</html>
+<link rel="import" href="../polymer/polymer.html">
+
+<!--
+`xin-app` is a xin application context.
+
+Example:
+
+    <xin-app></xin-app>
+
+@demo
+-->
+<dom-module id="xin-app">
+  <template>
+    <content></content>
+  </template>
+
+  <style>
+    :host {
+      box-sizing: border-box;
+      display: block;
+    }
+  </style>
+</dom-module>
+
+<script>
+  (function() {
+    'use strict';
+
+    Polymer({
+      is: 'xin-middleware',
+
+      extends: 'script',
+
+      attached: function() {
+        var appEl = this.parentNode;
+        while (appEl && appEl.nodeName !== 'XIN-APP') {
+          appEl = appEl.parentNode;
+        }
+
+        this.$app = appEl;
+
+        var fn = eval(this.textContent);
+
+        this.$app.use(fn);
+      },
+
+      properties: {
+        uri: String
+      },
+    });
+  })(this);
+</script>
