--- a/xin-app.html
+++ b/xin-app.html
@@ -52,6 +52,21 @@ Example:
     Polymer({
       is: 'xin-app',
 
+      created: function() {
+        this.storage = sessionStorage;
+        this.__val__ = {};
+
+        for(var i in this.storage) {
+          var val = this.storage[i];
+          try {
+            val = JSON.parse(val);
+          } catch(e) {
+          }
+
+          this.val('$$' + i, val);
+        }
+      },
+
       ready: function() {
         this._ = new xin.App({
           element: this,
@@ -67,11 +82,6 @@ Example:
           this.fire(eventName, {
             args: args
           });
-          // this.dispatchEvent(new CustomEvent(eventName, {
-          //   detail: {
-          //     args: args
-          //   }
-          // }));
         }.bind(this));
 
         if (this.autoStart) {
@@ -211,7 +221,36 @@ Example:
         return this._.getURI.apply(this._, arguments);
       },
 
-      home: function() {
+      val: function(property, value) {
+        if (property[0] !== '$') {
+          throw new Error('Cannot set val unprefixed with $');
+        }
+
+        var oldValue = this[property];
+
+        this.__val__[property] = value;
+        this.set(property, value);
+
+        if (property.indexOf('$$') === 0) {
+          if (value === null) {
+            delete this.storage[property.substr(2)];
+            return;
+          }
+
+          var serializedVal = typeof value === 'string' ? value : JSON.stringify(value);
+          if (serializedVal) {
+            this.storage[property.substr(2)] = serializedVal;
+          }
+        }
+
+        this.fire('$-changed', {
+          property: property,
+          newValue: value,
+          oldValue: oldValue
+        });
+      },
+
+      $home: function() {
         this.navigate(this.homeUri);
       }
     });
