--- a/container-behavior.html
+++ b/container-behavior.html
@@ -5,82 +5,76 @@
   'use strict';
 
   var ContainerBehavior = {
-    attached: function() {
-      this.app$ = xin.dom(this).parent('.xin-app');
 
-      if (!this.app$) {
-        throw new Error('Cannot use ContainerBehavior without AppBehavior scope');
+    created: function() {
+      for(var property in this.properties) {
+        if (property[0] === '$' && this.properties[property].notify) {
+          this._addPropertyEffect(property, 'function', this._notifySyncProperty);
+        }
       }
+    },
 
-      this._initContainer();
-      this._initGlobalFunctions();
+    attached: function() {
+      this._joinApp();
     },
 
     detached: function() {
-      Object.getOwnPropertyNames(this).forEach(function(i) {
-        if (i[0] === '$' && typeof this[i] === 'function') {
-          delete this[i];
+      this._leaveApp();
+    },
+
+    _notifySyncProperty: function(property, value) {
+      this.app$.fire('property-sync', {
+        property: property,
+        value: value
+      });
+    },
+
+    _syncProperty: function(evt) {
+      this.log('sync', evt.detail.property);
+      this.set(evt.detail.property, evt.detail.value);
+    },
+
+    _leaveApp: function() {
+      this.app$.removeEventListener('property-sync', this.__syncProperty);
+
+      Object.getOwnPropertyNames(xin.getPrototypeOf(this.app$)).forEach(function(property) {
+        if (property[0] === '$' && typeof this.app$[property] === 'function') {
+          delete this[property];
         }
       }.bind(this));
 
       delete this.app$;
     },
 
-    _initContainer: function() {
-      Object.getOwnPropertyNames(this.__data__).forEach(function(property) {
-        if (property[0] === '$') {
-          this.write(property, this.__data__[property]);
-        }
-      }.bind(this));
+    _joinApp: function() {
+      this.app$ = xin.dom(this).parent('.xin-app');
 
-      var data = this.app$.read();
-      this.group('populate container');
-      Object.getOwnPropertyNames(data).forEach(function(property) {
-        this.log(property);
-        this.set(property, data[property]);
-      }.bind(this));
-      this.groupEnd('populate container');
-
-      this.app$.addEventListener('container-write', this._containerWritten.bind(this));
-
-      if (this.id && this.id[0] === '$') {
-        this.write(this.id, this);
+      if (!this.app$) {
+        throw new Error('Cannot use ContainerBehavior without AppBehavior scope');
       }
-    },
 
-    _initGlobalFunctions: function() {
-      var proto = xin.getPrototypeOf(this.app$);
+      this.__syncProperty = this._syncProperty.bind(this);
+      this.app$.addEventListener('property-sync', this.__syncProperty);
 
-      Object.getOwnPropertyNames(proto).some(function(i) {
-        if (i[0] === '$' && typeof this.app$[i] === 'function') {
-          this[i] = function() {
-            return this.app$[i].apply(this.app$, arguments);
+      var globals = this.app$.__global__;
+      Object.getOwnPropertyNames(globals).forEach(function(property) {
+        this.set(property, globals[property]);
+      }.bind(this));
+
+      if (this.id[0] === '$') {
+        this.app$.fire('property-sync', {
+          property: this.id,
+          value: this
+        });
+      }
+
+      Object.getOwnPropertyNames(xin.getPrototypeOf(this.app$)).forEach(function(property) {
+        if (property[0] === '$'  && typeof this.app$[property] === 'function') {
+          this[property] = function() {
+            return this.app$[property].call(this.app$, arguments);
           };
         }
       }.bind(this));
-    },
-
-    _containerWritten: function(evt) {
-      this.log('changed', evt.detail.property, '<-', evt.target.nodeName);
-      if (this[evt.detail.property] !== evt.detail.newValue) {
-        this.log('written', evt.detail.property, '<-', evt.target.nodeName);
-        this.set(evt.detail.property, evt.detail.newValue);
-      }
-    },
-
-    write: function(property, newValue) {
-      if (property[0] !== '$') {
-        throw new Error('Cannot set non global value with write()');
-      }
-
-      var oldValue = this[property];
-      this.set(property, newValue);
-
-      this.fire('container-write', {
-        property: property,
-        newValue: newValue,
-        oldValue: oldValue,
-      });
     },
   };
 
