added global method

--- a/app-behavior.html
+++ b/app-behavior.html
@@ -205,6 +205,10 @@
 
     $home: function() {
       this.navigate(this.homeUri);
+    },
+
+    $back: function() {
+      history.back();
     }
   };
 
